# irccd

./: .arcconfig  .clang  .clang-format  .clang-tidy  .editorconfig  .gitignore  .hgignore  .hgsigs  .hgtags  CHANGES.md  CMakeLists.txt  CONTRIBUTE.md  CREDITS.md  GNUmakefile  INSTALL.md  LICENSE.md  MIGRATING.md  Makefile  README.md  STYLE.md  config.mk
cmake/: CMakeLists.txt  FindEv.cmake  IrccdDefinePlugin.cmake  IrccdOptions.cmake  IrccdPackage.cmake  IrccdSystem.cmake  IrccdVersion.cmake  check-attribute-format-printf.cmake  irccd-config.cmake.in  sysconfig.h.in
cmake/check/: GidIsSigned.cmake  PutTime.cmake  UidIsSigned.cmake
cmake/export/: CMakeLists.txt  irccd-config.cmake  libirccd-core.pc  libirccd-ctl.pc  libirccd-daemon.pc  libirccd-js.pc  libirccd-test.pc  libirccd.pc
cmake/function/: IrccdBuildHtml.cmake  IrccdDefineExecutable.cmake  IrccdDefineHtml.cmake  IrccdDefineLibrary.cmake  IrccdDefineMan.cmake  IrccdDefinePlugin.cmake  IrccdDefineTest.cmake  IrccdIndentMessage.cmake  IrccdInstallDependencies.cmake  IrccdSetGlobal.cmake  IrccdVeraCheck.cmake  dependencies.cmake.in
cmake/installer/: LICENSE
cmake/internal/: Irccd2Config.cmake.in  irccd-config.h.in  irccd2.pc.in  sysconfig.h.in  sysconfig.hpp.in
cmake/windows/: CMakeLists.txt
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in  mainpage.cpp  mainpage.dox  modules.cpp  modules.dox  page-overview-irccd.cpp  page-overview-plugins.cpp  page-overview-rules.cpp  page-overview-servers.cpp  page-overview-transports.cpp  page-overview.cpp  pages.cpp  pages.dox
doc/examples/: CMakeLists.txt  irccd.conf  irccd.conf.sample  irccdctl.conf  irccdctl.conf.sample  sample-hook.sh  template-plugin.cpp
doc/html/: CMakeLists.txt  html.lua  index.md  template-js.html  template.html
doc/man/: CMakeLists.txt  irccd.1.in  irccd.conf.5.in  irccdctl.1.in  irccdctl.conf.5.in  template-irccd.format.7  template-irccd.ipc.3  template-irccdctl.1
doc/procs/: 00.new-release.md  00.tests.md  10.new-plugin.md  20.options.md  30.options.md  60.new-command.md  README.md
doc/src/: build.md  format.md  ipc.md  irccd-test.md  irccd.conf.md  irccd.md  irccdctl.conf.md  irccdctl.md  javascript-plugin.md  network-api.md
examples/: CMakeLists.txt  examples.mk  irccd.conf.sample  sample-hook.sh  sample-plugin.c  sample-plugin.js
irccd/: CMakeLists.txt  command-plugin-info.cpp  command-plugin-info.h  command-plugin-list.cpp  command-plugin-list.h  command-plugin-load.cpp  command-plugin-load.h  command-plugin-reload.cpp  command-plugin-reload.h  command-plugin-unload.cpp  command-plugin-unload.h  command-server-cmode.cpp  command-server-cmode.h  command-server-cnotice.cpp  command-server-cnotice.h  command-server-connect.cpp  command-server-connect.h  command-server-disconnect.cpp  command-server-disconnect.h  command-server-info.cpp  command-server-info.h  command-server-invite.cpp  command-server-invite.h  command-server-join.cpp  command-server-join.h  command-server-kick.cpp  command-server-kick.h  command-server-list.cpp  command-server-list.h  command-server-me.cpp  command-server-me.h  command-server-message.cpp  command-server-message.h  command-server-mode.cpp  command-server-mode.h  command-server-nick.cpp  command-server-nick.h  command-server-notice.cpp  command-server-notice.h  command-server-part.cpp  (+92 more)
lib/: CMakeLists.txt  IrccdConfig.cmake  irccd.pc  irccd.pc.in  lib.mk
lib/irccd/: CMakeSources.cmake  alias.cpp  alias.h  alias.hpp  application.cpp  application.h  application.hpp  attrs.h  channel.c  channel.h  client.cpp  client.hpp  cmd-help.cpp  cmd-help.h  cmd-help.hpp  cmd-plugin-config.cpp  cmd-plugin-config.hpp  cmd-plugin-info.cpp  cmd-plugin-info.h  cmd-plugin-info.hpp  cmd-plugin-list.cpp  cmd-plugin-list.h  cmd-plugin-list.hpp  cmd-plugin-load.cpp  cmd-plugin-load.h  cmd-plugin-load.hpp  cmd-plugin-reload.cpp  cmd-plugin-reload.h  cmd-plugin-reload.hpp  cmd-plugin-unload.cpp  cmd-plugin-unload.h  cmd-plugin-unload.hpp  cmd-server-cmode.cpp  cmd-server-cmode.h  cmd-server-cmode.hpp  cmd-server-cnotice.cpp  cmd-server-cnotice.h  cmd-server-cnotice.hpp  cmd-server-connect.cpp  cmd-server-connect.h  (+275 more)
libcommon/: CMakeLists.txt
libcommon/irccd/: config.cpp  config.hpp  elapsed-timer.cpp  elapsed-timer.hpp  errors.cpp  errors.hpp  fs.cpp  fs.hpp  fs_util.hpp  ini.cpp  ini.hpp  ini_util.hpp  json_util.cpp  json_util.hpp  logger.cpp  logger.hpp  net.hpp  net_util.hpp  network_errc.cpp  network_errc.hpp  network_stream.hpp  options.cpp  options.hpp  path.cpp  path.hpp  signals.hpp  socket_acceptor.hpp  socket_connector.hpp  socket_stream.hpp  string_util.cpp  string_util.hpp  system.cpp  system.hpp  tls_acceptor.hpp  tls_connector.hpp  tls_stream.hpp  util.cpp  util.hpp  xdg.hpp
libirccd/: CMakeLists.txt
libirccd-core/: CMakeLists.txt
libirccd-js/: CMakeLists.txt
man/: CMakeLists.txt  irccd-api-chrono.3  irccd-api-directory.3  irccd-api-file.3  irccd-api-hook.3  irccd-api-http.3  irccd-api-logger.3  irccd-api-plugin.3  irccd-api-rule.3  irccd-api-server.3  irccd-api-system.3  irccd-api-timer.3  irccd-api-unicode.3  irccd-api-util.3  irccd-api.3  irccd-api.7  irccd-cmake.7  irccd-ipc.7  irccd-templates.7  irccd-test.1  irccd.1  irccd.conf.5  irccdctl.1  irccdctl.conf.5  libirccd-channel.3  libirccd-compat.3  libirccd-event.3  libirccd-hook.3  libirccd-irccd.3  libirccd-log.3  libirccd-rule.3  libirccd-server.3  libirccd-subst.3  libirccd-util.3  libirccd.3  man.mk
plugins/: CMakeLists.txt  plugins.mk
systemd/: CMakeLists.txt  irccd.service  irccd.service.in  systemd.mk
tests/: CMakeLists.txt  test-bot.c  test-channel.c  test-dl-plugin.c  test-event.c  test-jsapi-chrono.c  test-jsapi-directory.c  test-jsapi-file.c  test-jsapi-irccd.c  test-jsapi-system.c  test-jsapi-timer.c  test-jsapi-unicode.c  test-jsapi-util.c  test-log.c  test-plugin-ask.c  test-plugin-auth.c  test-plugin-hangman.c  test-plugin-history.c  test-plugin-joke.c  test-plugin-logger.c  test-plugin-plugin.c  test-plugin-tictactoe.c  test-rule.c  test-subst.c  test-util.c  tests.mk
win32/: CMakeLists.txt
(+1863 files in other folders)
